created a utility class for containers

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@
     @apply font-poppins text-resq-dark-100;
   }
 }
+
+@layer utilities {
+  .resq-container {
+    @apply max-w-7xl mx-auto  px-7;
+  }
+}
