--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 
 @layer utilities {
   .resq-container {
-    @apply max-w-7xl mx-auto  px-7;
+    @apply mx-auto max-w-7xl  px-7;
   }
 }
+
+/* .leaflet-container {
+  height: 600px;
+} */
